--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,17 @@
 @font-face {
-  font-family: Starwars;
-  src: local("Starwars"), url(./assets/fonts/Starjedi.ttf);
-  font-weight: bold;
+    font-family: Starwars;
+    src: local('Starwars'), url(./assets/fonts/Starjedi.ttf);
+    font-weight: bold;
 }
 
 .App {
-  font-family: 'Starwars';
+    font-family: 'Starwars';
+}
+
+.background-home {
+    background-image: url(./assets/images/home-background.png);
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center top;
+    background-repeat: no-repeat;
 }
