--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,13 @@
     background-position: center top;
     background-repeat: no-repeat;
 }
+
+.not-found {
+    height: 100vh;
+    widows: 100vw;
+    background-image: url(./assets/images/404.png);
+    background-size: contain;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-color: #fff;
+}
